# dezzex-technology-pvt-ltd-real-time-messaging-challenge

./: CHANGELOG.md  CONTRIBUTORS.md  README.md  chat.json  manage.py  mkdocs.yml  pyproject.toml  users.json
chat/: admin.py  api.py  apps.py  consumers.py  models.py  routing.py  schema.py
chat/migrations/: 0001_initial.py
chat/tests/: test_api.py
dezzex_technology_pvt_ltd_real_time_messaging_challenge/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.md
docs/api/: manage.md
docs/api/chat/: api.md  consumers.md  models.md  schema.md
docs/api/users/: api.md  schema.md  validators.md
templates/: security.txt
users/: admin.py  api.py  context_processors.py  forms.py  models.py  schema.py  validators.py
users/migrations/: 0001_initial.py
users/tests/: test_api.py
